--- a/src/index.html
+++ b/src/index.html
@@ -1335,7 +1335,7 @@
                 <div class="header-content">
                     <div class="logo">
                         <img
-                            src="arch-icon.png"
+                            src="/assets/icons/arch-logo.png"
                             alt="Arch Linux"
                             style="height: 32px; width: 32px"
                         />
@@ -1378,7 +1378,7 @@
                                         data-filter="all"
                                     >
                                         <span>All Packages</span>
-                                        <span class="checkmark">✓</span>
+                                        <span class="checkmark">✓</span></span>
                                     </div>
                                     <div
                                         class="dropdown-option"
@@ -1811,6 +1811,6 @@
             </div>
         </div>
 
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="./js/main.js"></script>
     </body>
 </html>
